# sifyfy.github.io

./: .editorconfig  .gitignore  CNAME  LICENSE  Makefile  build  contact.html  games.html  index.html  notes.html  package.yaml  siphilia-github-io.cabal  siphilia-net.cabal  site.hs  stack.yaml
css/: default.css  default.scss
games/: sirotan_clicker.html  sirotan_clicker.md
js/: card.js  index.js  sirotan_clicker.js
js/haxe/: build.hxml
js/haxe/sirotan_clicker/: Main.hx
notes/: 2015-10-18-first-note.html  2015-10-18-first-note.md  2016-01-05-ghc-mod-with-stack.html  2016-01-05-ghc-mod-with-stack.md  2016-02-05-ghcjs-and-nodejs.html  2016-02-05-ghcjs-and-nodejs.md
pages/: contact.md  games.md
templates/: copyright.html  default.html  footer.html  global-nav.html  head.html  header.html  index.html  nav.html  notitle.html  post-list.html  post.html
