name:                siphilia-github-io
version:             0.1.0.0
-- synopsis:
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              siphilia
maintainer:          siphilia.rn@gmail.com
copyright:           (c) 2013-2015 siphilia.
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

executable site
    main-is:             site.hs
    build-depends:       base           == 4.*
                       , binary
                       , filepath
                       , hakyll         == 4.7.*
                       , process
    default-language:    Haskell2010

