name:                siphilia-net
version:             0.1.0.0
-- synopsis:
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              siphilia
maintainer:          siphilia.rn@gmail.com
copyright:           (c) 2013 siphilia.
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

executable siphilia.net
    main-is:             site.hs
    build-depends:       base   >= 4.6  && < 4.7
                       , filepath
                       , hakyll >= 4.3  && < 4.4
    default-language:    Haskell2010
